--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,6 @@
-ErrorDocument 404 404.html
+ErrorDocument 404 /404.html
+ErrorDocument 401 /401.html
+ErrorDocument 403 /403.html
+
+Order Deny,Allow
+Deny from 192.168.70.12
